--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
     "sequelize": "^6.13.0"
   },
