--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "migration:down": "node util/rollback.js",
+    "migration:down": "node utils/rollback.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
